# sensorkit

./: README.md  TODO  config.yaml  i2c-read-or-write.patch  i2c-write.patch  monitor.py  pyproject.toml  requirements.txt  sensorkit-monitor.py
api/: metrics.py
examples/: config.yaml
modules/: __init__.py  controls.py  devices.py  meters.py  metrics.py  prometheus.py
sensorkit/: __init__.py  calibration.py  config.py  constants.py  controls.py  datastructures.py  detectors.py  devices.py  devicetree.py  meters.py  profiles.py  sensorkit.py  virtuals.py
sensorkit/api/: metrics.py
sensorkit/tools/: getters.py  mixins.py
sensorkit/virtuals/: openmeteo.py  static.py  virtual.py
tools/: getters.py
utils/: blinkatest.py  muxscan.py
