[tool.poetry]
name = "sensorkit"
version = "0.3.0"
description = "Simple utilities for generically using GPIO/I2C RPI sensors."
authors = ["Matthew Yacobucci <yacobucci@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
adafruit-blinka = "^8.50.0"
adafruit-circuitpython-bmp3xx = "^1.3.21"
adafruit-circuitpython-busdevice = "^5.2.10"
adafruit-circuitpython-connectionmanager = "^3.1.2"
adafruit-circuitpython-register = "^1.10.1"
adafruit-circuitpython-requests = "^4.1.8"
adafruit-circuitpython-scd4x = "^1.4.5"
adafruit-circuitpython-sht4x = "^1.0.21"
adafruit-circuitpython-tca9548a = "^0.7.4"
adafruit-circuitpython-typing = "^1.11.2"
adafruit-circuitpython-veml7700 = "^2.0.2"
adafruit-platformdetect = "^3.75.0"
adafruit-pureio = "^1.1.11"
apscheduler = "^3.11.0"
binho-host-adapter = "^0.1.6"
isodate = "^0.7.2"
pyftdi = "^0.56.0"
pyserial = "^3.5"
pyusb = "^1.2.1"
pyyaml = "^6.0.2"
rpi-ws281x = "^5.0.0"
rpi-gpio = "^0.7.1"
six = "^1.17.0"
sysv-ipc = "^1.1.0"
typing-extensions = "^4.12.2"
tzlocal = "^5.2"
adafruit-circuitpython-tsl2591 = "^1.3.13"
littletable = "^3.0.1"

[tool.poetry.group.dev.dependencies]
build = "^1.2.2.post1"
twine = "^6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
