[project]
name = "sensorkit"
version = "0.4.7"
description = "Simple utilities for generically using GPIO/I2C RPI sensors."
authors = [
    {name = "Matthew Yacobucci", email = "<yacobucci@gmail.com>"},
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "adafruit-blinka (>=8.50.0,<9.0.0)",
    "adafruit-circuitpython-bmp3xx (>=1.3.21,<2.0.0)",
    "adafruit-circuitpython-busdevice (>=5.2.10,<6.0.0)",
    "adafruit-circuitpython-connectionmanager (>=3.1.2,<4.0.0)",
    "adafruit-circuitpython-register (>=1.10.1,<2.0.0)",
    "adafruit-circuitpython-requests (>=4.1.8,<5.0.0)",
    "adafruit-circuitpython-scd4x (>=1.4.5,<2.0.0)",
    "adafruit-circuitpython-sht4x (>=1.0.21,<2.0.0)",
    "adafruit-circuitpython-tca9548a (>=0.7.4,<1.0.0)",
    "adafruit-circuitpython-typing (>=1.11.2,<2.0.0)",
    "adafruit-circuitpython-veml7700 (>=2.0.2,<3.0.0)",
    "adafruit-platformdetect (>=3.75.0,<4.0.0)",
    "adafruit-pureio (>=1.1.11,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "binho-host-adapter (>=0.1.6,<1.0.0)",
    "isodate (>=0.7.2,<1.0.0)",
    "pyftdi (>=0.56.0,<1.0.0)",
    "pyserial (>=3.5,<4.0)",
    "pyusb (>=1.2.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rpi-ws281x (>=5.0.0,<6.0.0)",
    "rpi-gpio (>=0.7.1,<1.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "sysv-ipc (>=1.1.0,<2.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "tzlocal (>=5.2,<6.0)",
    "adafruit-circuitpython-tsl2591 (>=1.3.13,<2.0.0)",
    "littletable (>=3.0.1,<4.0.0)",
]

[project.optional-dependencies]
dev = [
    "build (>=1.2.2.post1,<2.0.0)",
]
test = [
    "pytest (>=8.3.4,<9.0.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
